--- a/style/main.css
+++ b/style/main.css
@@ -2,3 +2,48 @@ body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
 }
+
+.header {
+  background: #fff;
+  width: 100%;
+}
+
+.logo-text {
+  text-transform: uppercase;
+  background-color: #63c6ae;
+  font-size: 24px;
+  margin: 0;
+  padding: 20px;
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  float: left;
+}
+
+.header__nav {
+  clear: left;
+}
+
+.header__nav ul {
+  margin: 0;
+  padding: 0;
+}
+.header__nav li {
+  list-style-type: none;
+  background: #242c2c;
+  padding: 25px 0;
+  text-align: center;
+  border-bottom: 1px dotted rgba(255, 255, 255, 0.2);
+}
+
+.header__nav a {
+  text-transform: uppercase;
+  color: #586165;
+  font-size: 14px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.header__btnMenu {
+}
