--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,10 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 .header {
   background: #fff;
   width: 100%;
@@ -32,7 +36,6 @@ body {
 .header__nav li {
   list-style-type: none;
   background: #242c2c;
-  padding: 25px 0;
   text-align: center;
   border-bottom: 1px dotted rgba(255, 255, 255, 0.2);
 }
@@ -43,7 +46,54 @@ body {
   font-size: 14px;
   font-weight: 600;
   text-decoration: none;
+  display: block;
+  padding: 25px 0;
+  transition: 0.5s ease;
+}
+
+.header__nav a:hover {
+  color: #63c6ae;
 }
 
 .header__btnMenu {
+}
+
+.hero {
+  height: 80vh;
+  padding: 40px 20px;
+  text-align: center;
+  background-image: url(/img/01.jpg);
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero__title {
+  background-color: #63c6ae;
+  color: #fff;
+  font-size: 28px;
+  font-weight: 600;
+  padding: 30px 20px;
+  text-transform: uppercase;
+}
+.hero__text {
+  background-color: #242a2c;
+  margin: 5px 30px 35px;
+  color: #fff;
+  padding: 20px;
+  font-size: 16px;
+}
+
+.hero__btn {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 15px 25px;
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
