--- a/style/main.css
+++ b/style/main.css
@@ -66,8 +66,7 @@ img {
   flex-direction: column;
   align-items: center;
   background: linear-gradient(45deg, white 50%, transparent 50%) left
-      calc(50% + 20px) bottom no-repeat,
-    linear-gradient(-45deg, white 50%, transparent 50%) left calc(50% - 20px)
+      calc(50% + 20px) bottom no-repeat,linear-gradient(-45deg, white 50%, transparent 50%) left calc(50% - 20px)
       bottom no-repeat,
     url(/img/01.jpg);
   background-size: 40px 40px, 40px 40px, cover;
