--- a/style/main.css
+++ b/style/main.css
@@ -9,6 +9,7 @@ body {
   margin-left: auto;
   padding-left: 1em;
   padding-right: 1em;
+  max-width: 980px;
 }
 
 img {
@@ -31,6 +32,7 @@ img {
   color: #fff;
   font-weight: bold;
   float: left;
+  text-align: right;
 }
 
 .header__nav {
@@ -267,6 +269,9 @@ img {
   color: #454e51;
   font-size: 15px;
 }
+.footer__logo {
+  text-transform: uppercase;
+}
 
 .footer__links li {
   list-style: none;
@@ -277,4 +282,73 @@ img {
   display: block;
   font-weight: 600;
   text-decoration: none;
+}
+
+@media screen and (min-width: 940px) {
+  .header {
+    position: fixed;
+  }
+
+  .logo-text {
+    width: 25%;
+    box-sizing: border-box;
+  }
+  .header__btnMenu {
+    display: none;
+  }
+
+  .header__nav {
+    float: left;
+    width: 75%;
+    clear: none;
+    max-width: 960px;
+  }
+
+  .header__nav ul {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .header__nav li {
+    border-bottom: none;
+    flex-grow: 1;
+  }
+
+  .header__nav a {
+    background: #fff;
+  }
+
+  .people-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+  }
+
+  .content .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+  }
+
+  .last-articles__thumbs {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .footer .container {
+    display: flex;
+  }
+
+  .footer .container > * {
+    margin: 1.5em;
+  }
+
+  .footer__logo {
+    text-transform: uppercase;
+  }
+}
+
+@media screen and (min-width: 360px) {
+  .btn-secundary {
+    margin-top: 8px;
+  }
 }
