--- a/style/main.css
+++ b/style/main.css
@@ -1,19 +1,18 @@
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
+img {
+  max-width: 100%;
+}
 .container {
   margin-right: auto;
   margin-left: auto;
   padding-left: 1em;
   padding-right: 1em;
   max-width: 980px;
-}
-
-img {
-  max-width: 100%;
 }
 
 .header {
@@ -24,6 +23,7 @@ img {
 .js .header {
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 
 .logo-text {
@@ -34,8 +34,8 @@ img {
   padding: 20px;
   display: block;
   text-decoration: none;
-  color: #fff;
   font-weight: bold;
+  color: #fff;
   float: left;
   text-align: right;
 }
@@ -43,7 +43,6 @@ img {
 .header__nav {
   clear: left;
 }
-
 .header__nav ul {
   margin: 0;
   padding: 0;
@@ -54,32 +53,105 @@ img {
   text-align: center;
   border-bottom: 1px dotted rgba(255, 255, 255, 0.2);
 }
-
 .header__nav a {
+  text-decoration: none;
   text-transform: uppercase;
   color: #586165;
   font-size: 14px;
   font-weight: 600;
-  text-decoration: none;
   display: block;
   padding: 25px 0;
-  transition: 0.5s ease;
+  transition: 0.8s ease;
 }
-
 .header__nav a:hover {
   color: #63c6ae;
 }
-
 .header__btnMenu {
   float: right;
   margin: 1.5em;
   background: transparent;
   border: none;
-  font-size: 17px;
+  font-size: 14px;
 }
 
 .js .header__nav {
   transition: max-height 1s;
+}
+
+.js .laptop-slider {
+  overflow: hidden;
+  color: white;
+}
+.js .laptop-slider .slideshow {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  max-width: 950px;
+}
+.js .laptop-slider figure {
+  opacity: 0;
+  transition: 1s opacity;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.js .laptop-slider figure.show {
+  opacity: 1;
+  position: static;
+}
+.js .laptop-slider .prev,
+.js .laptop-slider .next {
+  z-index: 3;
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+.js .laptop-slider .prev {
+  left: 10px;
+}
+.js .laptop-slider .next {
+  right: 10px;
+}
+
+.js .quote-slideshow {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  max-width: 950px;
+  box-sizing: border-box;
+  padding: 0 50px;
+  color: white;
+}
+.js .quote-slideshow figure h2 {
+  margin-top: 0;
+}
+.js .quote-slideshow figure {
+  opacity: 0;
+  transition: 1s opacity;
+  position: absolute;
+  top: 0;
+  left: 50px;
+  right: 50px;
+  box-sizing: border-box;
+  margin: 0;
+}
+.js .quote-slideshow figure.show {
+  opacity: 1;
+  position: static;
+}
+.js .quote-slideshow .prev,
+.js .quote-slideshow .next {
+  z-index: 3;
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+.js .quote-slideshow .prev {
+  left: 10px;
+}
+.js .quote-slideshow .next {
+  right: 10px;
 }
 
 .hero {
@@ -88,27 +160,30 @@ img {
   text-align: center;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+
   background: linear-gradient(45deg, white 50%, transparent 50%) left
       calc(50% + 20px) bottom no-repeat,
     linear-gradient(-45deg, white 50%, transparent 50%) left calc(50% - 20px)
       bottom no-repeat,
-    url(/img/01.jpg);
+    url(../img/01.jpg);
   background-size: 40px 40px, 40px 40px, cover;
 }
 
 .hero__title {
   background-color: #63c6ae;
-  color: #fff;
+  color: white;
   font-size: 28px;
   font-weight: 600;
   padding: 30px 20px;
   text-transform: uppercase;
 }
+
 .hero__text {
   background-color: #242a2c;
   margin: 5px 30px 35px;
-  color: #fff;
+  color: white;
   padding: 20px;
   font-size: 16px;
 }
@@ -119,7 +194,7 @@ img {
   border-radius: 5px;
   padding: 15px 25px;
   display: inline-block;
-  color: #fff;
+  color: white;
   text-decoration: none;
   font-size: 16px;
   font-weight: 600;
@@ -130,6 +205,8 @@ img {
   margin-top: 2.5em;
 }
 
+.people-cards__card {
+}
 .people-cards__card:hover {
   outline: 5px solid #63c6ae;
   outline-offset: -5px;
@@ -137,13 +214,12 @@ img {
 .people-cards__card:hover .people-cards__avatar img {
   transform: translateY(-50%);
 }
-
 .people-cards__card:hover .people-cards__title,
 .people-cards__card:hover .people-cards__text {
   color: #63c6ae;
 }
 
-.people-cards__imagem {
+.people-cards__image {
   width: 100%;
 }
 
@@ -153,19 +229,16 @@ img {
   height: 88px;
   overflow: hidden;
 }
-
 .people-cards__content {
   text-align: center;
   padding: 40px 25px 10px;
   border-left: 1px solid #dbe1e7;
 }
-
 .people-cards__title {
   color: #737c85;
   font-size: 21px;
   font-weight: normal;
 }
-
 .people-cards__text {
   color: #929da5;
   font-size: 14px;
@@ -181,38 +254,33 @@ img {
   color: #737c85;
   font-size: 21px;
   padding-top: 40px;
-  font-weight: 600;
+  font-weight: 400;
 }
-
 .content p {
   color: #929da5;
   font-size: 14px;
   word-spacing: 3px;
 }
-
 .button {
   padding: 15px 40px;
   border-radius: 3px;
   text-decoration: none;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 15px;
   margin-right: 15px;
   display: inline-block;
   transition: background 0.5s;
 }
-
-.btn-primary {
-  background-color: #69c6ae;
-  color: #fff;
-}
-
-.btn-secundary {
-  background-color: #455357;
-  color: #fff;
-}
-
 .button:hover {
   background-color: #929da5;
+}
+.button-primary {
+  background-color: #69c6ae;
+  color: white;
+}
+.button-secundary {
+  background-color: #455357;
+  color: white;
 }
 
 .last-articles__title {
@@ -222,7 +290,7 @@ img {
 
 .last-articles__title h2 {
   font-size: 24px;
-  color: #fff;
+  color: white;
   text-transform: uppercase;
   font-weight: 400;
 }
@@ -232,8 +300,8 @@ img {
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-auto-rows: auto;
   grid-gap: 0;
+  background: yellow;
 }
-
 .last-articles__thumbs img {
   display: block;
   width: 100%;
@@ -246,51 +314,46 @@ img {
   overflow: auto;
 }
 
-.slideShow {
+.slideshow {
   white-space: nowrap;
 }
-
-.slideShow figure {
+.slideshow figure {
   display: inline-block;
 }
 
 .quote-container {
   background-color: #63c6ae;
   padding: 50px 0;
-  border-bottom: 12px solid #58b9a1;
+  border-bottom: 12px solid #48b9a1;
 }
 
-.quote-slideShow h2 {
-  color: #fff;
+.quote-slideshow h2 {
+  color: white;
   font-size: 30px;
   font-style: italic;
   font-weight: normal;
 }
 
-.quote-slideShow figcaption {
-  color: #fff;
+.quote-slideshow figcaption {
+  color: white;
   font-size: 18px;
   text-align: center;
 }
 
-.no-js .quote-slideShow figure + figure {
+.no-js .quote-slideshow figure + figure {
   margin-top: 5em;
 }
 
 .footer {
   background-color: #242a2c;
-  padding: 5px 0 250px 0;
+  padding: 50px 0 250px;
   color: #454e51;
-  font-size: 15px;
-}
-.footer__logo {
-  text-transform: uppercase;
+  font-size: 14px;
 }
 
 .footer__links li {
   list-style: none;
 }
-
 .footer__links a {
   color: #454e51;
   display: block;
@@ -298,7 +361,11 @@ img {
   text-decoration: none;
 }
 
-@media screen and (min-width: 940px) {
+.footer__logo {
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 1024px) {
   .header {
     position: fixed;
   }
@@ -307,6 +374,7 @@ img {
     width: 25%;
     box-sizing: border-box;
   }
+
   .header__btnMenu {
     display: none;
   }
@@ -315,7 +383,7 @@ img {
     float: left;
     width: 75%;
     clear: none;
-    max-width: 960px;
+    max-width: 800px;
   }
 
   .header__nav ul {
@@ -329,7 +397,7 @@ img {
   }
 
   .header__nav a {
-    background: #fff;
+    background: white;
   }
 
   .people-cards {
@@ -351,18 +419,7 @@ img {
   .footer .container {
     display: flex;
   }
-
   .footer .container > * {
     margin: 1.5em;
-  }
-
-  .footer__logo {
-    text-transform: uppercase;
-  }
-}
-
-@media screen and (min-width: 360px) {
-  .btn-secundary {
-    margin-top: 8px;
   }
 }
